image mock ups and css fixes

--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<h1>Karly Mintz Kreations</h1>
+	<h2>Hello test</h2>
 	<p>This is the brand page for Karly Mintz.</p>
 </body>
 </html>
