latest updates with hover and images

--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -16,13 +16,14 @@
 		<section class="clearfix" id="wide">
 			<a class="podcastepisode" href="#">
 				<figure>
-					<img src="/images/judith_caravaggio.jpg" alt="Judith Beheading Holofernes by Caravaggio">
+					<img src="images/judith_caravaggio.jpg" alt="judith beheading holofernes caravaggio">
+					<img src="images/pajata.jpg" alt="pajata">
 				</figure>
 				<figcaption>
 					<h3>
-						Lorem Impsum
+						Rome
 					</h3>
-					<p>Lorem Ipsum</p>
+					<p>We're pairing Caravaggio's <em>Judith Beheading Holofernes</em> with the classic Roman pajata.</p>
 					<time>30 minutes</time>
 					<small>
 						January 28 2020
@@ -31,13 +32,14 @@
 			</a>
 			<a class="podcastepisode" href="#">
 				<figure>
-					<img src="/images/treasures_hirst.jpg" alt="Treasures From the Wreck of the Unbelievable">
+					<img src="images/treasures_hirst.jpg" alt="treasures from the wreck of the unbelievable damien hirst">
+					<img src="images/bacala_mantecato.jpg" alt="bacala mantecato">
 				</figure>
 				<figcaption>
 					<h3>
-						Lorem Impsum
+						Venice 
 					</h3>
-					<p>Lorem Ipsum</p>
+					<p>We're pairing works from the Venice Biennale, like Damien Hirst's <em>Treasures from the Wreck of the Unbelievable</em>, with the Venetian bacala mantecato.</p>
 					<time>30 minutes</time>
 					<small>
 						January 28 2020
@@ -46,13 +48,14 @@
 			</a>
 			<a class="podcastepisode" href="#">
 				<figure>
-					<img src="/images/pollack.jpg" alt="Jackson Pollack drip painting">
+					<img src="images/pollack.jpg" alt="jackson pollack drip painting">
+					<img src="images/hot_dog_completo.jpg" alt="hot dog completo">
 				</figure>
 				<figcaption>
 					<h3>
-						Lorem Impsum
+						Chile vs USA
 					</h3>
-					<p>Lorem Ipsum</p>
+					<p>We're pairing abstract expressionism with Chilean street food.</p>
 					<time>30 minutes</time>
 					<small>
 						January 28 2020
@@ -61,13 +64,14 @@
 			</a>
 			<a class="podcastepisode" href="#">
 				<figure>
-					<img src="/images/basquiat_thousand.jpg" alt="Basquiat Five Thousand Dollars">
+					<img src="images/basquiat_thousand.jpg" alt="basquiat five thousand dollars">
+					<img src="images/american_appetizers.jpg" alt="american appetizers">
 				</figure>
 				<figcaption>
 					<h3>
-						Lorem Impsum
+						80s Americana
 					</h3>
-					<p>Lorem Ipsum</p>
+					<p>We're pairing Basquiat's <em>Five Thousand Dollars</em> with American appetizer culture.</p>
 					<time>30 minutes</time>
 					<small>
 						January 28 2020
@@ -76,13 +80,14 @@
 			</a>
 			<a class="podcastepisode" href="#">
 				<figure>
-					<img src="/images/bosch_garden.jpg" alt="Bosch Garden of Earthly Delights">
+					<img src="images/bosch_garden.jpg" alt="bosch garden of earthly delights">
+					<img src="images/casu_marzu.jpg" alt="casu marzu">
 				</figure>
 				<figcaption>
 					<h3>
-						Lorem Impsum
+						Sardinia
 					</h3>
-					<p>Lorem Ipsum</p>
+					<p>We're pairing Hieronymous Bosch's <em>Garden of Earthly Delights</em> with casu marzu.</p>
 					<time>30 minutes</time>
 					<small>
 						January 28 2020
@@ -91,13 +96,14 @@
 			</a>
 			<a class="podcastepisode" href="#">
 				<figure>
-					<img src="/images/hilma_altar.jpg" alt="Hilma Af Klint Altarpiece">
+					<img src="images/hilma_altar.jpg" alt="hilma af klint altarpiece">
+					<img src="images/molecular_gastronomy.jpg" alt="molecular gastronomy">
 				</figure>
 				<figcaption>
 					<h3>
-						Lorem Impsum
+						Global: The Atomic Level
 					</h3>
-					<p>Lorem Ipsum</p>
+					<p>We're paring Hilma af Klint's body of work with molecular gastronomy.</p>
 					<time>30 minutes</time>
 					<small>
 						January 28 2020
@@ -106,13 +112,14 @@
 			</a>
 			<a class="podcastepisode" href="#">
 				<figure>
-					<img src="https://via.placeholder.com/300x300">
+					<img src="images/spiral_jetty.jpg" alt="spiral jetty robert smithson">
+					<img src="images/salt_slab.jpg" alt="salt slab">
 				</figure>
 				<figcaption>
 					<h3>
-						Lorem Impsum
+						Time and Method
 					</h3>
-					<p>Lorem Ipsum</p>
+					<p>We're pairing Robert Smithson's <em>Spiral Jetty</em> with salt slabs and umami flavor profiles.</p>
 					<time>30 minutes</time>
 					<small>
 						January 28 2020
