--- a/unit_9/index.html
+++ b/unit_9/index.html
@@ -10,8 +10,8 @@
 		<section id="narrow"><h1>The Sieve</h1>
 			<h2 id="slogan">A Podcast On Pairings</h2>
 			<nav>
-			<a href="#" class="button">Episodes</a>
-			<a href="#" class="button">About</a>
+			<a href="#" class="button">Episodes<span>&#8702;</span></a>
+			<a href="#" class="button">About<span>&#8702;</span></a>
 		</nav>
 	</section>
 		<section class="clearfix" id="wide">
@@ -31,7 +31,7 @@
 					</small>
 				</figcaption>
 			</a>
-			<a class="podcastepisode" href="#">
+			<a class="podcastepisode" href="venice.html">
 				<figure>
 					<img src="images/treasures_hirst.jpg" alt="treasures from the wreck of the unbelievable damien hirst">
 					<img src="images/bacala_mantecato.jpg" alt="bacala mantecato">
@@ -47,7 +47,7 @@
 					</small>
 				</figcaption>
 			</a>
-			<a class="podcastepisode" href="#">
+			<a class="podcastepisode" href="chilevsusa.html">
 				<figure>
 					<img src="images/pollack.jpg" alt="jackson pollack drip painting">
 					<img src="images/hot_dog_completo.jpg" alt="hot dog completo">
@@ -63,7 +63,7 @@
 					</small>
 				</figcaption>
 			</a>
-			<a class="podcastepisode" href="#">
+			<a class="podcastepisode" href="80samericana.html">
 				<figure>
 					<img src="images/basquiat_thousand.jpg" alt="basquiat five thousand dollars">
 					<img src="images/american_appetizers.jpg" alt="american appetizers">
@@ -79,7 +79,7 @@
 					</small>
 				</figcaption>
 			</a>
-			<a class="podcastepisode" href="#">
+			<a class="podcastepisode" href="sardinia.html">
 				<figure>
 					<img src="images/bosch_garden.jpg" alt="bosch garden of earthly delights">
 					<img src="images/casu_marzu.jpg" alt="casu marzu">
@@ -95,7 +95,7 @@
 					</small>
 				</figcaption>
 			</a>
-			<a class="podcastepisode" href="#">
+			<a class="podcastepisode" href="globaltheatomiclevel.html">
 				<figure>
 					<img src="images/hilma_altar.jpg" alt="hilma af klint altarpiece">
 					<img src="images/molecular_gastronomy.jpg" alt="molecular gastronomy">
@@ -111,7 +111,7 @@
 					</small>
 				</figcaption>
 			</a>
-			<a class="podcastepisode" href="#">
+			<a class="podcastepisode" href="timeandmethod.html">
 				<figure>
 					<img src="images/spiral_jetty.jpg" alt="spiral jetty robert smithson">
 					<img src="images/salt_slab.jpg" alt="salt slab">
